force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/Bundled_Price__c.field-meta.xml
<CustomField>
        <fullName>Bundled_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundled Price</label>
        <type>Checkbox</type>
    </CustomField>