force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/Discount_Schedule_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Discount_Schedule_External_ID__c</fullName>
    <description>This field is the Discount Schedule External ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is the Discount Schedule External ID.</inlineHelpText>
    <label>Discount Schedule External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>