force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/Encore_Bundle_Number__c.field-meta.xml
<CustomField>
        <fullName>Encore_Bundle_Number__c</fullName>
        <label>Encore Bundle Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>