force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/External_Sku_PG__c.field-meta.xml
<CustomField>
        <fullName>External_Sku_PG__c</fullName>
        <externalId>true</externalId>
        <label>External Sku PG</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>