force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/List_Price__c.field-meta.xml
<CustomField>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>