force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <description>This field contains the Lower Bound for the Discount Schedule record.</description>
    <inlineHelpText>This field contains the Lower Bound for the Discount Schedule record.</inlineHelpText>
    <label>Lower Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>