force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/Max_Tier_Count__c.field-meta.xml
<CustomField>
        <fullName>Max_Tier_Count__c</fullName>
        <label>Max Tier Count</label>
        <summarizedField>SBQQ__DiscountTier__c.SBQQ__Number__c</summarizedField>
        <summaryForeignKey>SBQQ__DiscountTier__c.SBQQ__Schedule__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </CustomField>