force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__Account__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Account that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>Discount_Schedules</relationshipName>
        <type>Lookup</type>
    </CustomField>