force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__CrossProducts__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CrossProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether volume discount calculations should aggregate quantities of all products using this schedule.</description>
        <inlineHelpText>Select the checkbox to aggregate quantities of all products using this schedule for the purpose of volume discount calculation. Slab discounts cannot be used for Cross Product discounts.</inlineHelpText>
        <label>Cross Products</label>
        <type>Checkbox</type>
    </CustomField>