force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__ExcludedPricebookIds__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ExcludedPricebookIds__c</fullName>
        <description>Comma-seperated list of price book IDs for which this discount schedule should not apply.</description>
        <inlineHelpText>Enter a list of price book IDs separated by commas that should not be applied to this discount schedule.</inlineHelpText>
        <label>Excluded Pricebook IDs</label>
        <type>TextArea</type>
    </CustomField>