force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__IncludeBundledProducts__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IncludeBundledProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Quantities of Bundled Product Options will be included in the Aggregation Scope</description>
        <inlineHelpText>If checked, the Quantities of Bundled Product Options will be included in the Aggregation Scope</inlineHelpText>
        <label>Include Bundled Quantities</label>
        <type>Checkbox</type>
    </CustomField>