force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__OverrideBehavior__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OverrideBehavior__c</fullName>
        <description>Determines if the current Discount Tier that the product falls within is editable, if all Discount Tiers are editable, or none.</description>
        <inlineHelpText>Determines if the current Discount Tier that the product falls within is editable, if all Discount Tiers are editable, or none.</inlineHelpText>
        <label>Override Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Current Tier Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>