force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__Pricebook__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price book that this discount schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</description>
        <inlineHelpText>Price book that this discount schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </CustomField>