force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__QuoteLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote Line that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Quote Line that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>Discount_Schedules</relationshipName>
        <type>Lookup</type>
    </CustomField>