force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <description>The type of discount schedule determines how the discount is calculated.</description>
        <inlineHelpText>Choose the type of discount that determines how the amount or percentages will be subtracted from price.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                    <default>true</default>
                    <label>Range</label>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>