force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__UsePriceForAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UsePriceForAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the user defined Discount Schedule&apos;s Discount Unit will be set to Price.</description>
        <inlineHelpText>If checked, the user defined Discount Schedule&apos;s Discount Unit will be set to Price.</inlineHelpText>
        <label>Use Price For Amount</label>
        <type>Checkbox</type>
    </CustomField>