force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/SBQQ__UserDefined__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UserDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether this schedule was created by an end user or an admin.</description>
        <inlineHelpText>Identifies whether this schedule was created by an end user or an admin.</inlineHelpText>
        <label>User Defined</label>
        <type>Checkbox</type>
    </CustomField>