force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/Transactional_Tier__c.field-meta.xml
<CustomField>
        <fullName>Transactional_Tier__c</fullName>
        <label>Transactional Tier</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>