force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound__c</fullName>
    <description>This field contains the Upper Bound on the Discount Schedule record.</description>
    <inlineHelpText>This field contains the Upper Bound on the Discount Schedule record.</inlineHelpText>
    <label>Upper Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>